--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!--HEADER-->
-    <header>
+    <header class="head">
        <div class="container"> 
         <nav>
 
@@ -40,9 +40,11 @@
 
         <!--HERO-->
         <section class="hero">
+            <div class="container hero-cont">
         <h1 class="hero-title">Effective Solutions
 for Your Business</h1>
 <button type="button" class="hero-btn">Order Service</button>
+</div>
 </section>
 
 <!--FEATURES-->
