--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--HEADER-->
     <header class="head">
        <div class="container"> 
-        <nav>
+        <nav class="header-nav">
 
 <a href="./index.html" class="header-logo">Web<span class="header-logo-studio">Studio</span></a>
 
