--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!--HEADER-->
     <header class="head">
-       <div class="container"> 
+       <div class="container headcont"> 
         <nav class="header-nav">
 
 <a href="./index.html" class="header-logo">Web<span class="header-logo-studio">Studio</span></a>
