--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ for Your Business</h1>
 <!--FEATURES-->
 <section class="features">
 <div class="container">    
-<h2 hidden>Features</h2>
+<h2 class="visually-hidden">Features</h2>
 <ul class="features-list">
     <li class="features-item">
         <h3 class="features-subtitle">Strategy</h3>
