--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@ problem to walk away with the perfect and creative solution. </p>
             width="264"
             height="260"
             class="team-img">
+            <div class="name-prof">
             <h3 class="team-item-subtitle">Mark Guerrero</h3>
             <p class="team-item-text">Product Designer</p>
+        </div>
         </li>
         <li class="team-list">
             <img src="./images/imgtw.jpg"
@@ -96,8 +98,10 @@ problem to walk away with the perfect and creative solution. </p>
             width="264"
             height="260"
             class="team-img">
+            <div class="name-prof">
             <h3 class="team-item-subtitle">Tom Ford</h3>
             <p class="team-item-text">Frontend Developer</p>
+        </div>
         </li>
         <li class="team-list">
             <img src="./images/imgth.jpg"
@@ -105,16 +109,20 @@ problem to walk away with the perfect and creative solution. </p>
             width="264"
             height="260"
             class="team-img">
+            <div class="name-prof">
             <h3 class="team-item-subtitle">Camila Garcia</h3>
             <p class="team-item-text">Marketing</p>
+        </div>
         </li>
         <li class="team-list">
             <img src="./images/imgfo.jpg" alt="Daniel Wilson"
             width="264"
             height="260"
             class="team-img">
+            <div class="name-prof">
             <h3 class="team-item-subtitle">Daniel Wilson</h3>
             <p class="team-item-text">UI Designer</p>
+        </div>
         </li>
     </ul>
 </div>
