--- a/index.html
+++ b/index.html
@@ -137,38 +137,50 @@ problem to walk away with the perfect and creative solution. </p>
             <li class="portfolio-item">
                 <img src="./images/portfolioone.jpg" alt="Banking App"
                 width="360" height="300" class="portfolio-img">
+                <div class="name-app">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/portfoliotwo.jpg" alt="Cashless Payment"
                 width="360" height="300" class="portfolio-img">
+                <div class="name-app">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/portfoliothree.jpg" alt="Meditation App"
                 width="360" height="300" class="portfolio-img">
+                <div class="name-app">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/portfoliofour.jpg" alt="Taxi Service"
                 width="360" height="300" class="portfolio-img">
+                <div class="name-app">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/portfoliofive.jpg" alt="Screen Illustrations"
                 width="360" height="300" class="portfolio-img">
+                <div class="name-app">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/portfoliosix.jpg" alt="Online Courses"
                 width="360" height="300" class="portfolio-img">
+                <div class="name-app">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
+                </div>
             </li>
         </ul>
     </div>
