--- a/index.html
+++ b/index.html
@@ -14,64 +14,103 @@
 <body>
     <!--HEADER-->
     <header class="head">
-       <div class="container headcont"> 
+       <div class="container headcont">
+
         <nav class="header-nav">
 
-<a href="./index.html" class="header-logo">Web<span class="header-logo-studio">Studio</span></a>
+<a href="./index.html" class="header-logo">Web
+    <span class="header-logo-studio">Studio</span>
+</a>
 
 <ul class="header-menu-list">
-    <li><a href="./index.html" class="header-menu-item">Studio</a></li>
-    <li><a href="" class="header-menu-item">Portfolio</a></li>
-    <li><a href="" class="header-menu-item">Contacts</a></li>
+
+    <li>
+        <a href="./index.html" class="header-menu-item">Studio</a>
+    </li>
+    <li>
+        <a href="" class="header-menu-item">Portfolio</a>
+    </li>
+    <li>
+        <a href="" class="header-menu-item">Contacts</a>
+    </li>
+
 </ul>
         </nav>
+
         <address class="header-address">
+
             <ul class="header-address-list">
-                <li><a href="mailto:info@devstudio.com" class="header-address-item">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="header-address-item">+11 (000) 111-11-11</a></li>
+
+                <li>
+                    <a href="mailto:info@devstudio.com" class="header-address-item">
+                    info@devstudio.com
+                </a>
+            </li>
+                <li>
+                    <a href="tel:+110001111111" class="header-address-item">
+                        +11 (000) 111-11-11
+                    </a>
+                </li>
+            
             </ul>
 
         </address>
         </div>
     </header>
-    <!--MAIN CONTENT--> 
+
+
     <main>
+  <!--HERO-->
 
-
-        <!--HERO-->
         <section class="hero">
             <div class="container hero-cont">
-        <h1 class="hero-title">Effective Solutions
-for Your Business</h1>
+
+        <h1 class="hero-title">
+            Effective Solutions for Your Business
+        </h1>
+
 <button type="button" class="hero-btn">Order Service</button>
 </div>
 </section>
 
 <!--FEATURES-->
 <section class="features">
-<div class="container">    
+<div class="container">
+
 <h2 class="visually-hidden">Features</h2>
+
 <ul class="features-list">
+
     <li class="features-item">
         <h3 class="features-subtitle">Strategy</h3>
-        <p class="features-item-text">Our goal is to identify the business
-problem to walk away with the perfect and creative solution. </p>
+        <p class="features-item-text">
+            Our goal is to identify the business problem to walk away with the perfect and creative solution. 
+        </p>
     </li>
+
     <li class="features-item">
         <h3 class="features-subtitle">Punctuality</h3>
-        <p class="features-item-text"> Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
+        <p class="features-item-text">
+            Bring the key message to the brand's audience for the best price within the shortest possible time.
+        </p>
     </li>
+
     <li class="features-item">
         <h3 class="features-subtitle">Diligence</h3>
-        <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        <p class="features-item-text">
+            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+        </p>
     </li>
+
     <li class="features-item">
         <h3 class="features-subtitle">Technologies</h3>
-        <p class="features-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <p class="features-item-text">
+            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+        </p>
     </li>
 </ul>
-</div>
 
+</div>
 </section>
 
 
@@ -79,8 +118,11 @@ problem to walk away with the perfect and creative solution. </p>
 <!--Our Team-->
 <section class="team"> 
 <div class="container">
+
     <h2 class="team-title">Our Team</h2>
+
     <ul class="team-list-item">
+
         <li class="team-list">
             <img src="./images/imgo.jpg"
             alt="Mark Guerrero"
@@ -92,6 +134,7 @@ problem to walk away with the perfect and creative solution. </p>
             <p class="team-item-text">Product Designer</p>
         </div>
         </li>
+
         <li class="team-list">
             <img src="./images/imgtw.jpg"
             alt="Tom Ford"
@@ -103,6 +146,7 @@ problem to walk away with the perfect and creative solution. </p>
             <p class="team-item-text">Frontend Developer</p>
         </div>
         </li>
+
         <li class="team-list">
             <img src="./images/imgth.jpg"
             alt="Camila Garcia"
@@ -114,6 +158,7 @@ problem to walk away with the perfect and creative solution. </p>
             <p class="team-item-text">Marketing</p>
         </div>
         </li>
+
         <li class="team-list">
             <img src="./images/imgfo.jpg" alt="Daniel Wilson"
             width="264"
@@ -132,8 +177,11 @@ problem to walk away with the perfect and creative solution. </p>
 <!--section portfolio-->
 <section class="portfolio">
     <div class="container">
+
         <h2 class="portfolio-title">Our Portfolio</h2>
+
         <ul class="portfolio-list">
+
             <li class="portfolio-item">
                 <img src="./images/portfolioone.jpg" alt="Banking App"
                 width="360" height="300" class="portfolio-img">
@@ -142,6 +190,7 @@ problem to walk away with the perfect and creative solution. </p>
                 <p class="portfolio-text">App</p>
                 </div>
             </li>
+
             <li class="portfolio-item">
                 <img src="./images/portfoliotwo.jpg" alt="Cashless Payment"
                 width="360" height="300" class="portfolio-img">
@@ -150,6 +199,7 @@ problem to walk away with the perfect and creative solution. </p>
                 <p class="portfolio-text">Marketing</p>
                 </div>
             </li>
+
             <li class="portfolio-item">
                 <img src="./images/portfoliothree.jpg" alt="Meditation App"
                 width="360" height="300" class="portfolio-img">
@@ -158,6 +208,7 @@ problem to walk away with the perfect and creative solution. </p>
                 <p class="portfolio-text">App</p>
                 </div>
             </li>
+
             <li class="portfolio-item">
                 <img src="./images/portfoliofour.jpg" alt="Taxi Service"
                 width="360" height="300" class="portfolio-img">
@@ -166,6 +217,7 @@ problem to walk away with the perfect and creative solution. </p>
                 <p class="portfolio-text">Marketing</p>
                 </div>
             </li>
+
             <li class="portfolio-item">
                 <img src="./images/portfoliofive.jpg" alt="Screen Illustrations"
                 width="360" height="300" class="portfolio-img">
@@ -174,6 +226,7 @@ problem to walk away with the perfect and creative solution. </p>
                 <p class="portfolio-text">Design</p>
                 </div>
             </li>
+
             <li class="portfolio-item">
                 <img src="./images/portfoliosix.jpg" alt="Online Courses"
                 width="360" height="300" class="portfolio-img">
@@ -183,6 +236,7 @@ problem to walk away with the perfect and creative solution. </p>
                 </div>
             </li>
         </ul>
+
     </div>
 </section>
 
@@ -191,8 +245,13 @@ problem to walk away with the perfect and creative solution. </p>
     <!--FOOTER-->
     <footer class="foot">
         <div class="container">
-            <a href="./index.html" class="foot-logo">Web<span class="foot-logo-studio">Studio</span></a>
-            <p class="foot-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+
+            <a href="./index.html" class="foot-logo">Web
+                <span class="foot-logo-studio">Studio</span>
+            </a>
+            <p class="foot-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
         </div>
     </footer>
 </body>
