--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!--HERO-->
 
         <section class="hero">
-            <div class="container hero-cont">
+            <div class="container">
 
         <h1 class="hero-title">
             Effective Solutions for Your Business
