--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         <h1 class="hero-title">
             Effective Solutions for Your Business
         </h1>
-
+<div class="btn">
 <button type="button" class="hero-btn">Order Service</button>
+</div>
 </div>
 </section>
 
